--- a/packages/SystemUI/AndroidManifest.xml
+++ b/packages/SystemUI/AndroidManifest.xml
@@ -345,7 +345,7 @@
         </activity-alias>
 
         <activity android:name=".tuner.LockscreenActivity"
-                  android:theme="@style/ExTunerSettings"
+                  android:theme="@style/CustomTunerSettings"
                   android:label="@string/tuner_lock_screen"
                   android:process=":tuner"
                   android:parentActivityName="com.custom.settings.fragments.LockScreen"
